[package]
name = "jito-bam-template"
version = "0.1.0"
edition = "2021"
authors = ["Rykiri <yellow-flash@seeker.network>"]
description = "A high-fidelity template for Jito Block Assembly Marketplace (BAM) sidecar plugins. Ready-to-use boilerplate for MEV-optimized transaction bundling."
repository = "https://github.com/RYthaGOD/-jito-bam-template"
keywords = ["solana", "jito", "mev", "bam", "bundler", "zk-compression"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web Framework
axum = "0.7.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Solana & Jito
solana-sdk = "2.2.1"
solana-client = "2.2.1"
jito-sdk-rust = "0.2.1"
anchor-client = "0.32.1"

# Cryptography
ed25519-dalek = "2.1"
bs58 = "0.5.1"
bincode = "1.3.3"

# Utils
anyhow = "1.0"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# Optional: ZK-Compression (Enabled by default in template, but easy to strip)
light-client = { version = "0.23.0", features = ["v2"] }
light-sdk = "0.23.0"
rand = "0.10.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "jito-bam-template"
path = "src/main.rs"

[[bin]]
name = "generate_payload"
path = "src/bin/generate_payload.rs"

